# nix-torchlib-shell

./: CMakeLists.txt  README.md  main.cpp  shell.nix
.github/workflows/: build.yaml
